--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -172,7 +172,7 @@ li:target {
 }
 
 .sol {
-  font-family: Andika, Solera, sans-serif;
+  font-family: Solera, Andika, sans-serif;
   text-align: right;
   font-size: 22px;
 }
